Bug 1402366: Mark datetimebox as not needing xul.css. r=bholley,jessica

We create a datetimebox in content documents that gets an XBL binding on
nsDateTimeControlFrame::CreateAnonymousContent.

This is done during frame construction, and loading a datetimebox insert xul.css
in the document, which causes invalidation to run.

datetimebox styles are in html.css, and there's no rule in xul.css that styles
it, so we don't need to load the stylesheet at all.

MozReview-Commit-ID: 2SbIOoER2uB

--HG--
extra : rebase_source : b5da3129547949d49a465e7553b0b4d2d2098d5a